Fix tab height being squished. Tweaked toolbar item selection colors.
(integrated from komodo (trunk) change 75560 by nathanr)

git-svn-id: http://svn.openkomodo.com/repos/openkomodo/trunk@11281 b87d16e7-d29f-4ee1-b5ec-817d645d335f

--- a/src/chrome/komodo/skin/plat/gnome/_config/window.less
+++ b/src/chrome/komodo/skin/plat/gnome/_config/window.less
@@ -39,15 +39,15 @@
 @menubar-button-border-radius:          4px;
 
 @menubar-button-background-color:       inherit;
-@menubar-button-background-color-hover: rgba(0,0,0, 0.20) !important;
-@menubar-button-background-color-active:rgba(0,0,0, 0.20) !important;
+@menubar-button-background-color-hover: rgba(0,0,0, 0.10) !important;
+@menubar-button-background-color-active:rgba(0,0,0, 0.10) !important;
 @menubar-button-background-image:       none;
 @menubar-button-background-image-active:none;
 @menubar-button-background-image-hover: none;
 @menubar-button-background-position:    inherit;
 @menubar-button-background-repeat:      inherit;
 @menubar-button-shadow:                 inherit;
-@menubar-button-shadow-active:          inset 0px 4px 5px rgba(0,0,0,0.3);
+@menubar-button-shadow-active:          inset 0px 4px 5px rgba(0,0,0,0.15);
 @menubar-button-shadow-hover:           inherit;
 @menubar-button-icon-filter:            inherit;
 
@@ -83,7 +83,7 @@
 
 @tab-selected-border:                   @tab-border;
 @tab-selected-background:               @tab-background;
-@tab-selected-box-shadow:               inset 0px -2px 5px rgba(0,0,0,0.15), 0px 0px 5px rgba(0, 0, 0, 0.35);
+@tab-selected-box-shadow:               0px 0px 5px rgba(0, 0, 0, 0.35);
 @tab-selected-color:                    inherit;
 @tab-selected-background-vertical:      @tab-background-vertical;
 @tab-selected-box-shadow-vertical:      none;
