--- a/src/chrome/komodo/skin/plat/gnome/platform.less
+++ b/src/chrome/komodo/skin/plat/gnome/platform.less
@@ -86,6 +86,9 @@ toolbar #historyRecentLocations {
   width: 24px;
 }
 
+#main-toolboxrow toolbar > toolbaritem > toolbarbutton {
+  margin-right: 1px;
+}
 
 /**
  * File Status within menu items.
@@ -112,6 +115,7 @@ ko-pane[type="vertical"] tabs[anonid="tabs"] {
 
 .native tabs {
   padding-top: 3px;
+  height: auto;
   
   tab {
     -moz-appearance: tab;
